configurable project wide summaries (support to output all candidates)